packages/typ/tests/fixtures/diagnostics/0774_polyvar_closed_row_extra_pattern_02.ml
let use_beta : [ `A of int ] -> int = function
  | `A x -> x
  | `B -> 1
